pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-642-hard_line_breaks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/642-hard_line_breaks.md
---
[32m<a href="foo  
bar">[0m
